// Vitest Snapshot v1

exports[`<ReferenceItemBuild /> > should render 'No Build Found' when [latestBuild=null] 1`] = `
<Styled(styled.div)>
  <h4>
    No index found. 
    <Link
      to={
        {
          "pathname": "/refs/foo/indexes",
          "state": {
            "rebuild": true,
          },
        }
      }
    >
      Build one. 
    </Link>
  </h4>
  <p>
    You cannot use this reference until you have built an index for it.
  </p>
</Styled(styled.div)>
`;

exports[`<ReferenceItemBuild /> > should render 'No Build Found' when [progress=30] 1`] = `
<Styled(styled.div)>
  <h4>
    No index found. 
    <Link
      to={
        {
          "pathname": "/refs/foo/indexes",
          "state": {
            "rebuild": true,
          },
        }
      }
    >
      Build one. 
    </Link>
  </h4>
  <p>
    You cannot use this reference until you have built an index for it.
  </p>
</Styled(styled.div)>
`;

exports[`<ReferenceItemBuild /> > should render build info when latestBuild available and [progress=100] 1`] = `
<Styled(styled.div)>
  <h4>
    Latest Build is
     
    <Link
      to="/refs/foo/indexes/bar"
    >
      Index 
      3
    </Link>
  </h4>
  <p>
    Created 
    <RelativeTime
      time="2018-01-01T00:00:00.000000Z"
    />
     by 
    bob
  </p>
</Styled(styled.div)>
`;
